Remove the margin-bottom to the navbar-fixed-top, because we do not need it when the navbar collapses.

--- a/BigFont/assets-120/bootstrap/less/responsive-navbar.less
+++ b/BigFont/assets-120/bootstrap/less/responsive-navbar.less
@@ -19,7 +19,7 @@
     position: static;
   }
   .navbar-fixed-top {
-    margin-bottom: @baseLineHeight;
+    margin-bottom: 0; // bigfont change
   }
   .navbar-fixed-bottom {
     margin-top: @baseLineHeight;
